# drone_sim

./: README.md  ai_usage.md
config/: narrow.yaml  open.yaml  random.yaml  sim.yaml
install/: local_setup.sh  setup.sh
install/drone_controller/include/ake_drone_sim/: se3_controller.hpp
install/drone_controller/lib/drone_controller/: position_controller_node
install/drone_controller/share/drone_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/drone_controller/share/drone_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  drone_controllerConfig-version.cmake  drone_controllerConfig.cmake  export_drone_controllerExport-noconfig.cmake
install/drone_controller/share/drone_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/drone_dynamics/include/ake_drone_sim/: common.hpp  dynamics_model.hpp  eskf.hpp  ros_utils.hpp
install/drone_dynamics/lib/drone_dynamics/: imu_gps_fusion_node  quadrotor_dynamics_node
install/drone_dynamics/share/drone_dynamics/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_dynamics/share/drone_dynamics/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  drone_dynamicsConfig-version.cmake  drone_dynamicsConfig.cmake
install/drone_dynamics/share/drone_dynamics/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/drone_map/include/ake_drone_sim/: pointcloud_utils.hpp  voxel_grid.hpp
install/drone_map/lib/drone_map/: simulated_lidar_node  voxel_map_node
install/drone_map/share/drone_map/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_map/share/drone_map/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  drone_mapConfig-version.cmake  drone_mapConfig.cmake  export_drone_mapExport-noconfig.cmake
install/drone_map/share/drone_map/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/drone_msgs/share/drone_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/drone_msgs/share/drone_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  drone_msgsConfig-version.cmake  drone_msgsConfig.cmake  export_drone_msgs__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/drone_msgs/share/drone_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/drone_msgs/share/drone_msgs/msg/: TrajectorySetpoint.idl  TrajectorySetpoint.msg
install/drone_planner/include/ake_drone_sim/: astar3d.hpp  bspline.hpp  mpc_smoother.hpp
install/drone_planner/lib/drone_planner/: ab_planner_node
install/drone_planner/share/drone_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_planner/share/drone_planner/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  drone_plannerConfig-version.cmake  drone_plannerConfig.cmake
install/drone_planner/share/drone_planner/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/drone_visualization/lib/drone_visualization/: plot_results.py  run_experiment.py  visualization_node  waypoint_mission.py
install/drone_visualization/share/drone_visualization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_visualization/share/drone_visualization/cmake/: drone_visualizationConfig-version.cmake  drone_visualizationConfig.cmake
install/drone_visualization/share/drone_visualization/config/: narrow.yaml  open.yaml  random.yaml  sim.yaml
install/drone_visualization/share/drone_visualization/environment/: ament_prefix_path.dsv  path.dsv
install/drone_visualization/share/drone_visualization/launch/: narrow.launch.py  open.launch.py  random.launch.py  sim.launch.py
launch/: narrow.launch.py  open.launch.py  random.launch.py  sim.launch.py
log/: latest_build  latest_list  latest_test  latest_test-result
report/: REPORT.md
report/results/: avoidance_metrics.txt  hover_metrics.txt  narrow_metrics.txt  point_metrics.txt  waypoint_metrics.txt
rviz/: sim.rviz
scripts/: plot_results.py  run_experiment.py  waypoint_mission.py
src/drone_controller/: CMakeLists.txt
src/drone_controller/include/ake_drone_sim/: se3_controller.hpp
src/drone_controller/src/: position_controller_node.cpp  se3_controller.cpp
src/drone_dynamics/: CMakeLists.txt
src/drone_dynamics/include/ake_drone_sim/: common.hpp  dynamics_model.hpp  eskf.hpp  ros_utils.hpp
src/drone_dynamics/src/: dynamics_model.cpp  eskf.cpp  imu_gps_fusion_node.cpp  quadrotor_dynamics_node.cpp
src/drone_dynamics/test/: test_dynamics.cpp
src/drone_map/: CMakeLists.txt  package.xml
src/drone_map/include/ake_drone_sim/: pointcloud_utils.hpp  voxel_grid.hpp
src/drone_map/src/: simulated_lidar_node.cpp  voxel_grid.cpp  voxel_map_node.cpp
src/drone_msgs/: CMakeLists.txt  package.xml
src/drone_planner/: CMakeLists.txt  package.xml
src/drone_planner/include/ake_drone_sim/: astar3d.hpp  bspline.hpp  mpc_smoother.hpp
src/drone_planner/src/: ab_planner_node.cpp  astar3d.cpp  bspline.cpp  mpc_smoother.cpp
src/drone_planner/test/: test_planner.cpp
src/drone_visualization/: CMakeLists.txt  package.xml
src/drone_visualization/src/: visualization_node.cpp
(+43 files in other folders)
