cmake_minimum_required(VERSION 3.8)
project(drone_controller)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra -Wpedantic)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(drone_msgs REQUIRED)
find_package(drone_dynamics REQUIRED)
add_library(drone_controller_core SHARED src/se3_controller.cpp)
target_include_directories(drone_controller_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
target_link_libraries(drone_controller_core drone_dynamics::drone_dynamics_core Eigen3::Eigen)
ament_target_dependencies(drone_controller_core rclcpp std_msgs nav_msgs drone_msgs drone_dynamics)
add_executable(position_controller_node src/position_controller_node.cpp)
target_link_libraries(position_controller_node drone_controller_core)
ament_target_dependencies(position_controller_node rclcpp std_msgs nav_msgs drone_msgs drone_dynamics)
install(TARGETS drone_controller_core EXPORT export_drone_controller ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
install(TARGETS position_controller_node RUNTIME DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
ament_export_targets(export_drone_controller HAS_LIBRARY_TARGET)
ament_export_dependencies(drone_msgs drone_dynamics Eigen3)
ament_package()
