cmake_minimum_required(VERSION 3.8)
project(drone_dynamics)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra -Wpedantic)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(eigen3_cmake_module REQUIRED)
find_package(Eigen3 REQUIRED)
set(deps rclcpp std_msgs geometry_msgs nav_msgs sensor_msgs tf2 tf2_ros)
add_library(drone_dynamics_core SHARED src/dynamics_model.cpp src/eskf.cpp)
target_include_directories(drone_dynamics_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
target_link_libraries(drone_dynamics_core Eigen3::Eigen)
ament_target_dependencies(drone_dynamics_core ${deps})
foreach(node quadrotor_dynamics_node imu_gps_fusion_node)
  add_executable(${node} src/${node}.cpp)
  target_link_libraries(${node} drone_dynamics_core)
  ament_target_dependencies(${node} ${deps})
endforeach()
install(TARGETS drone_dynamics_core EXPORT export_drone_dynamics ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
install(TARGETS quadrotor_dynamics_node imu_gps_fusion_node RUNTIME DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
ament_export_targets(export_drone_dynamics HAS_LIBRARY_TARGET)
ament_export_dependencies(${deps} Eigen3)
if(BUILD_TESTING)
  find_package(ament_cmake_gtest REQUIRED)
  ament_add_gtest(test_dynamics test/test_dynamics.cpp)
  target_link_libraries(test_dynamics drone_dynamics_core)
endif()
ament_package()
