cmake_minimum_required(VERSION 3.8)
project(drone_map)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra -Wpedantic)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(drone_dynamics REQUIRED)
set(deps rclcpp sensor_msgs nav_msgs visualization_msgs drone_dynamics)
add_library(drone_map_core SHARED src/voxel_grid.cpp)
target_include_directories(drone_map_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
target_link_libraries(drone_map_core drone_dynamics::drone_dynamics_core Eigen3::Eigen)
ament_target_dependencies(drone_map_core ${deps})
foreach(node voxel_map_node simulated_lidar_node)
  add_executable(${node} src/${node}.cpp)
  target_link_libraries(${node} drone_map_core)
  ament_target_dependencies(${node} ${deps})
endforeach()
install(TARGETS drone_map_core EXPORT export_drone_map ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
install(TARGETS voxel_map_node simulated_lidar_node RUNTIME DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
ament_export_targets(export_drone_map HAS_LIBRARY_TARGET)
ament_export_dependencies(drone_dynamics sensor_msgs Eigen3)
ament_package()
