<?xml version="1.0"?>
<package format="3">
  <name>drone_msgs</name><version>0.1.0</version>
  <description>Reusable interfaces for the ake drone simulator.</description>
  <maintainer email="ake@example.com">ake</maintainer><license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend><depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
