cmake_minimum_required(VERSION 3.8)
project(drone_planner)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra -Wpedantic)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(drone_msgs REQUIRED)
find_package(drone_dynamics REQUIRED)
find_package(drone_map REQUIRED)
set(deps rclcpp sensor_msgs geometry_msgs nav_msgs std_msgs visualization_msgs drone_msgs drone_dynamics drone_map)
add_library(drone_planner_core SHARED src/astar3d.cpp src/bspline.cpp src/mpc_smoother.cpp)
target_include_directories(drone_planner_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
target_link_libraries(drone_planner_core drone_map::drone_map_core drone_dynamics::drone_dynamics_core Eigen3::Eigen)
ament_target_dependencies(drone_planner_core ${deps})
add_executable(ab_planner_node src/ab_planner_node.cpp)
target_link_libraries(ab_planner_node drone_planner_core)
ament_target_dependencies(ab_planner_node ${deps})
install(TARGETS drone_planner_core EXPORT export_drone_planner ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
install(TARGETS ab_planner_node RUNTIME DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
ament_export_targets(export_drone_planner HAS_LIBRARY_TARGET)
ament_export_dependencies(drone_map drone_dynamics drone_msgs Eigen3)
if(BUILD_TESTING)
  find_package(ament_cmake_gtest REQUIRED)
  ament_add_gtest(test_planner test/test_planner.cpp)
  target_link_libraries(test_planner drone_planner_core)
endif()
ament_package()
