<?xml version="1.0"?>
<package format="3">
  <name>drone_planner</name><version>0.1.0</version>
  <description>3D A*, B-spline and constrained receding-horizon planner with LiDAR checks.</description>
  <maintainer email="ake@example.com">ake</maintainer><license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend><depend>sensor_msgs</depend><depend>geometry_msgs</depend><depend>nav_msgs</depend><depend>std_msgs</depend><depend>visualization_msgs</depend>
  <depend>drone_msgs</depend><depend>drone_dynamics</depend><depend>drone_map</depend><depend>Eigen3</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
