cmake_minimum_required(VERSION 3.8)
project(drone_visualization)
set(CMAKE_CXX_STANDARD 17)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(drone_dynamics REQUIRED)
add_executable(visualization_node src/visualization_node.cpp)
target_link_libraries(visualization_node drone_dynamics::drone_dynamics_core)
ament_target_dependencies(visualization_node rclcpp nav_msgs geometry_msgs visualization_msgs drone_dynamics)
install(TARGETS visualization_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY ../../launch/ DESTINATION share/${PROJECT_NAME}/launch)
install(DIRECTORY ../../config/ DESTINATION share/${PROJECT_NAME}/config)
install(DIRECTORY ../../rviz/ DESTINATION share/${PROJECT_NAME}/rviz)
install(PROGRAMS ../../scripts/run_experiment.py ../../scripts/plot_results.py ../../scripts/waypoint_mission.py DESTINATION lib/${PROJECT_NAME})
ament_package()
